--- a/css_hong/NikeMenMobile.css
+++ b/css_hong/NikeMenMobile.css
@@ -1,11 +1,15 @@
-@media (max-width:960px){
+@media screen and (max-width:960px){
 
     .container{
         flex-direction: column;
     }
 
     #header01{
-        display: none;
+        display: none;        
+    }
+
+    header{
+        width: 100%;
     }
 
     #icon_set{
@@ -17,12 +21,23 @@
         margin: 0 10px;
     }
 
-    header .header-bottom-nav{
+    #header02 .header-bottom-nav{
         display: none;
     }
 
-    footer{
-        min-width: 1200px;
+    #header03_menu {
+        display: none;
     }
+
+    #header03{
+        display: flex;
+        align-items: center;
+    }
+    #header03 #icon_filter_mobile{
+        display: flex;
+        width: 15px;
+        height: 15px;
+        margin: 0 25px;
+    }    
 
 }
