--- a/css_yang/kid.css
+++ b/css_yang/kid.css
@@ -6,8 +6,26 @@
     font-family: 'Noto Sans KR', sans-serif;
     text-decoration: none;
 }
-
-
+li{
+    list-style: none;
+}
+.QA{
+    position: relative;
+}
+#gotoQA{
+    background: blanchedalmond;
+    border: solid 0px;
+    position:fixed;
+    left: 30px;
+    bottom: 30px;
+    border-radius: 20px;
+    
+    text-decoration: none;
+    width: 100px;
+    padding: 10px 0px;
+    text-align: center;
+    z-index: 10000;
+}
 
 body{
     margin-left: 10px;
@@ -151,10 +169,10 @@ section .shoe_both .shoe_left .caption_left{
     left: 50px;
 }
 
- #mobile_shoe{
+#mobile_shoe{
     display: none;
 }
- #desk_shoe{
+#desk_shoe{
     display: inline;
 }
 
@@ -190,15 +208,31 @@ section .swiper-wrapper div{
 section .swiper-wrapper figcaption{
     position: absolute;
     bottom: 20px;
-    left: 100px;
+    left: 20px;
 }
 
+
 /* swiper */
+.desktop-show{
+    display: flex;
+    flex-wrap: no-wrap;
+}
+.desks{
+    position: relative;
+    margin: 0px 5px;
+}
+.desks figcaption{
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+}
+
 h3{
     margin: 30px;
 }
 .swiper-container{
     height: 400px;
+    display: none;
     
 }
 .swiper-slide{
@@ -208,20 +242,22 @@ h3{
     align-items: center;
 
     display: -webkit-box;
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      -webkit-align-items: center;
-      align-items: center;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
 }
 
-/* css */
+
+
+/* footer */
 footer{
     background-color: #000000;
     color: #FFFFFF;
@@ -356,6 +392,15 @@ footer #online{
     }
      #desk_shoe{
         display: none;
+    }
+    .desktop-show{
+        display: none;
+    }
+
+    /* 슬라이드보이게 */
+    .swiper-container{
+        height: 400px;
+        display: inline;
     }
 
     
