forthTried_made_NotificationPage

--- a/css/women.css
+++ b/css/women.css
@@ -19,6 +19,11 @@ header{
     margin-right: 20px;
 }
 
+#notify{
+    text-decoration: none;
+        color: black;
+}
+
 header .line2{
     display: flex;
     flex-direction: row;
