--- a/css_lee/index_mobile.css
+++ b/css_lee/index_mobile.css
@@ -325,6 +325,14 @@ footer div:nth-child(2) img{
     width: 20px;
 }
 
+footer div:nth-child(2) a{
+    margin-right: 10px;
+}
+
+footer div:nth-child(2) a:hover{
+    color: white;
+}
+
 footer>div:last-child{
     display: block;
     padding-top: 30px;
