--- a/css_hong/NikeMenMobile.css
+++ b/css_hong/NikeMenMobile.css
@@ -40,4 +40,12 @@
         margin: 0 25px;
     }    
 
+    /* .side ul{
+        display: flex;
+    } */
+    .side ul li{
+        display: inline-block;        
+        padding: 0 10px;
+    }
+
 }
