1차 merge 하기전 커밋 및 푸시

--- a/css_hong/NikeMen.css
+++ b/css_hong/NikeMen.css
@@ -287,9 +287,9 @@ footer ul{
     justify-content: center;
 }
 
-#footer01 ul{
-    /* margin: 20px 60px; */
-}
+/* #footer01 ul{
+    margin: 20px 60px;
+} */
 
 #footer01 .footer01_ul01 a{
     color: white;
