--- a/css_ma/mobile_new.css
+++ b/css_ma/mobile_new.css
@@ -6,10 +6,7 @@
     text-decoration: none;
     list-style: none;
     font-family:sans-serif ; 
-
-   
 }
-
 
 
 /* head */
@@ -46,8 +43,8 @@ nav ul{
 
 #h3_mobile{
  
-   background-color: orange;
-   
+   background-color: black;
+   color: white;
     padding: 10px
     
 
@@ -167,7 +164,7 @@ text-align: center;
 
 
 
-/* 메가메뉴 */
+/* 메가메뉴
 
 #mega_mobile{
     background-color: white;
@@ -196,5 +193,49 @@ text-align: center;
     position: absolute;
     top: 0px;
     left: 0px;
+} */
+
+
+
+/* 모바일메뉴 */
+
+.checkbtn{
+    display: block;
 }
+.adidasmenu{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background: black;
+    top: 70px;
+    left: 0px;
+    /* left: 0; */
+    text-align: center; 
+
+    left: 100%;
+    text-align: center;
+    transition: all .5s;
+}
+.adidasmenu li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+}
+.adidasmenu li a{
+    font-size: 20px;
+    color: white;
+}
+.adidasmenu a:hover, .adidasmenu a.active{
+    background: none;
+    color: red;
+}
+
+#check:checked ~.adidasmenu{
+    left: 50%;
+    text-align: left;
+    padding-left: 30px;
+}
+
+
+
 
