--- a/css_ma/mobile_new.css
+++ b/css_ma/mobile_new.css
@@ -203,7 +203,7 @@ text-align: center;
     display: block;
 }
 .adidasmenu{
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
     background: black;
