--- a/css_lee/index.css
+++ b/css_lee/index.css
@@ -63,8 +63,10 @@ header li{
 }
 
 nav li{
-    margin-left: 10px;
-    margin-right: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 15px;
+    padding-bottom: 18px;
 }
 header{
     background-color:#eeeeee;
@@ -89,9 +91,51 @@ header{
     width: 25px;
 }
 
+#main_category li:hover{
+    border-bottom: 2px solid black;
+}
+
+.main_category_items{
+
+}
+
 .main-image{
     width: 100%;
 }
+
+.navigationFlow{
+    height: 0px;
+    background-color: white;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: center;
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+.navigationFlow li:first-child{
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    margin-top: 25px;
+}
+.navigationFlow li:first-child a{
+    color: black;
+}
+
+.navigationFlow li{
+    margin-bottom: 5px;
+    margin-top: 5px;
+    font-size: 13px;
+}
+
+.navigationFlow li a{
+    color: #888888;
+}
+
+
 
 /* .style-magazine{
     display: flex;
