모바일에서 메뉴 구현 완료

--- a/css_hong/men.css
+++ b/css_hong/men.css
@@ -221,6 +221,10 @@ header .header-bottom-nav{
     flex-wrap: wrap;
 }
 
+#main_menu_mobile{
+    display: none;
+}
+
 aside.side{
     flex: 1;
     /* background-color: wheat; */
