--- a/css_lee/index_tablet.css
+++ b/css_lee/index_tablet.css
@@ -299,6 +299,9 @@ footer ul:last-child li:first-child{
     color: white;
 }
 
+#navigation_tablet_items{
+    width: 0px;
+}
 footer>div:nth-child(2){
     display: flex;
     flex-direction: column;
@@ -350,4 +353,43 @@ footer>div:last-child>div:first-child p{
 footer>div:last-child>div:last-child p{
     margin-bottom: 0px;
     display: block;
+}
+
+/* 모바일메뉴 */
+
+.checkbtn{
+    display: block;
+}
+.adidasmenu{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #fefefe;
+    top: 55px;
+    left: 0px;
+    /* left: 0; */
+    text-align: center; 
+
+    left: 100%;
+    text-align: center;
+    transition: all .5s;
+}
+.adidasmenu li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+}
+.adidasmenu li a{
+    font-size: 20px;
+    color: black;
+}
+.adidasmenu a:hover, .adidasmenu a.active{
+    background: none;
+    color: #666666;
+}
+
+#check:checked ~.adidasmenu{
+    left: 50%;
+    text-align: left;
+    padding-left: 30px;
 }
