--- a/css_yang/qna.css
+++ b/css_yang/qna.css
@@ -1,6 +1,67 @@
-table{
-    border-collapse: collapse;
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 24px 0;
 }
-table, th, td {
-    border: 1px solid black;
+.logo {
+  width: 10%;
+}
+hr {
+  border: 1px black;
+}
+.write {
+  width: 80%;
+  text-align: left;
+}
+#write__name {
+  margin-bottom: 8px;
+}
+#write__msg {
+  width: 100%;
+  margin: 8px 0;
+}
+
+#write__btn {
+  text-align: center;
+  margin-bottom: 8px;
+}
+#aa {
+  margin-bottom: 16px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+}
+.container h1 {
+  margin-bottom: 16px;
+}
+table {
+  table-layout: auto;
+  width: 100%;
+}
+#bb:hover {
+  cursor: pointer;
+}
+
+/* /////////// */
+#read {
+  display: none;
+  width: 80%;
+}
+
+#read__name {
+  margin-bottom: 8px;
+}
+#read__msg {
+  width: 100%;
+  margin: 8px 0;
+}
+
+#read__btn {
+  text-align: center;
+  margin-bottom: 8px;
 }
