--- a/css_yang/kid.css
+++ b/css_yang/kid.css
@@ -90,6 +90,7 @@ nav{
     border: blue dotted 0px;
     display: flex;
     align-items: center;
+    margin-bottom: 18px;
 }
 
 nav .title{
@@ -99,6 +100,7 @@ nav .title{
     left: 20px;
 }
 nav .nav_menu{
+    display: none;
     text-align: center;
     width: 100%;
     margin: 10px 0px;
@@ -113,6 +115,11 @@ nav .nav_menu #nav_menu_1st{
     padding-left: 0px;
 }
 /* section 시작 */
+hr{
+    border: 1px solid grey;
+    margin-bottom: 18px;
+    width: 100%;
+}
 section{
     display: flex;
     flex-direction: column;
@@ -120,7 +127,7 @@ section{
 }
 section .set{
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 36px;
 }
 
 section .set video{
@@ -232,7 +239,7 @@ section .swiper-wrapper figcaption{
 }
 
 h3{
-    margin: 30px;
+    /* margin: 30px; */
 }
 .swiper-container{
     height: 400px;
@@ -378,6 +385,7 @@ footer #online{
         /* position: fixed; */
         width: 100%;
         background-color: white;
+    
     }
     
     nav .title{
@@ -437,7 +445,7 @@ footer #online{
         border:0px;
 
         position: fixed;
-        top: 15px;
+        top: 10px;
         z-index: 100000;
     }
     .header_list{
@@ -467,7 +475,7 @@ footer #online{
     }
     #check:checked ~ div header .header_list
     {
-        left: 60%;
+        left: 40%;
         text-align: left;
         padding-left: 20px;
         display: inline-flex;
@@ -477,7 +485,9 @@ footer #online{
         filter: blur(0px); 
     }
 
-    
+    .hidden1 li a{
+        font-size: 20px;
+    }
 
     .hidden2_box, .hidden3_icon_box{
         display: block;
@@ -494,11 +504,20 @@ footer #online{
     .hidden2_box h4{
         margin-bottom: 20px;
 
-        width: 60%;
+        width: 48%;
     }
     
     #hidden2{
         display: inline;
         margin: 0px;
+    }
+    footer{
+        display: none;
+    }
+    #gotoQA{
+        width: 20%;
+        font-size: 12px;
+        left: 15px;
+        bottom: 15px;
     }
 }
