--- a/css/responsive.css
+++ b/css/responsive.css
@@ -372,4 +372,40 @@ footer{
 .threePic{
     display: none;
 }
+
+
+
+/* 모바일메뉴 */
+
+.checkbtn{
+    display: block;
+}
+.adidasmenu{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #fefefe;
+    top: 55px;
+    left: 0px;
+    /* left: 0; */
+    text-align: center; 
+
+    left: 100%;
+    text-align: center;
+    transition: all .5s;
+}
+.adidasmenu li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+}
+.adidasmenu li a{
+    font-size: 20px;
+    color: black;
+}
+.adidasmenu a:hover, .adidasmenu a.active{
+    background: none;
+    color: #666666;
+}
+
 }
