--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,6 +6,10 @@ ul{list-style: none;}
       display: none;
       
   }
+
+  #hamberger{
+      display: flex;
+  }
   header .line2{
     display: flex;
     flex-direction: column;
