--- a/css/women.css
+++ b/css/women.css
@@ -15,6 +15,10 @@ header{
     padding: 8px 12px;
 }
 
+/* #hamberger{
+    display: none;
+} */
+
 .topMenu{
     display: inline-flex;
     float: right;
@@ -505,7 +509,7 @@ footer #online{
     margin-top: 20px;
 }
 
-#didas{
+#hamberger{
     display: none;
 }
 
