--- a/css/women.css
+++ b/css/women.css
@@ -12,12 +12,20 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 8px 12px;
+
+}
+
+#jordonIcon{
+margin-left: 30px;
 }
 
 /* #hamberger{
     display: none;
 } */
+
+.top{
+    background-color: #F5F5F5;
+}
 
 .topMenu{
     display: inline-flex;
@@ -34,6 +42,8 @@ header .line2{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
+    padding-right: 50px;
 }
 
 #logo{
@@ -51,14 +61,17 @@ header .mainCategory a{
 }
 
 .icon{
-    display: inline-flex;
-    float: right;
+    padding: 10px 0px;
 }
 
 header .line3{
-    display: inline-flex;
-    flex-direction: row;
+    width: 100%;
     margin-top: 20px;
+    text-align: center;
+}
+
+.icon_only_tablet{
+    display: none;
 }
 
 #nikeWomen{
